# helix

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  a.outj  index.html  makefile  metac.py  metac_test.py  package.json  test.sh  test_basic.py  webpack.config.js
helix/: __init__.py
helix/ast/: lexer.py  parser.py  token.py
helix/check/: __init__.py  check_ownership.py
helix/dep/: __init__.py  fun_target.py  gen_deps.py  global_target.py  jit_target.py  struct_target.py  target.py  unit_target.py  var_target.py
helix/err/: __init__.py
helix/ir/: types.py
helix/jit/: __init__.py
helix/sym/: __init__.py  expr_sym.py  fun_symbol.py  gen_syms.py  global_symbol.py  hoist.py  jit_target.py  manglers.py  oper_symbol.py  struct_symbol.py  unit_symbol.py  var_symbol.py
helix/targets/: __init__.py  fun_target.py  jit_target.py  misc_targets.py  struct_target.py  unit_target.py
helix/tests/: __init__.py  test_conditions.py  test_dep.py  test_globals.py  test_mangling.py  test_misc.py  test_ownership.py  test_statements.py  test_structs.py  utils.py
include/metac/: compiler.hpp  index.hpp
metac/: __init__.py  compiler.py  scope.py
metac/ast/: __init__.py  condition_nodes.py  expr_node.py  node.py  parse.py  parser.py  statement_node.py  token.py  types.py
metac/dep/: __init__.py  create_jit_target.py  fun_target.py  gen_deps.py  gen_targets.py  get_deps.py  global_target.py  hoist.py  jit_target.py  scope.py  struct_target.py  symbol.py  target.py  unit_target.py  var_target.py
metapy/: __init__.py
public/: bundle.js
src/: index.jsx  main.cpp
(+188 files in other folders)
